msm8998: enable night display mode
Signed-off-by: liquid0624 <rjbirnesser@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -447,4 +447,8 @@
 
     <!-- True if camera app should be pinned via Pinner Service -->
     <bool name="config_pinnerCameraApp">true</bool>
+
+    <!-- Enable night mode -->
+    <bool name="config_setColorTransformAccelerated">true</bool>
+
 </resources>
